# cicy-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  test-windows.yml
cicy_utils/: __init__.py  cli.py
tests/: test_cli.py
