[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cicy-utils"
version = "0.2.0"
description = "Cross-platform development utilities and tools"
authors = [{name = "Cicy Dev", email = "dev@cicy.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["utilities", "tools", "development", "cross-platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
    "requests>=2.25.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.scripts]
cicy = "cicy_utils.cli:main"

[project.urls]
Homepage = "https://github.com/cicy-dev/cicy-utils"
Repository = "https://github.com/cicy-dev/cicy-utils.git"
Issues = "https://github.com/cicy-dev/cicy-utils/issues"
Documentation = "https://github.com/cicy-dev/cicy-utils/docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
